<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/puregains_navigation"
    app:startDestination="@id/feed_fragment">

    <fragment
        android:id="@+id/feed_fragment"
        android:name="com.example.puregains_app.FeedFragment"
        android:label="@string/feed">
        <action
            android:id="@+id/action_feed_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment" />
        <action
            android:id="@+id/action_feed_fragment_to_setting_fragment2"
            app:destination="@id/setting_fragment" />
        <action
            android:id="@+id/action_feed_fragment_to_postFragment"
            app:destination="@id/post_fragment" />
    </fragment>
    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.example.puregains_app.ProfileFragment"
        android:label="@string/profile" />
    <fragment
        android:id="@+id/setting_fragment"
        android:name="com.example.puregains_app.SettingFragment"
        android:label="@string/setting" />
    <fragment
        android:id="@+id/post_fragment"
        android:name="com.example.puregains_app.PostFragment"
        android:label="@string/new_post"
        tools:layout="@layout/fragment_post" />
</navigation>